--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,11 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string-array name="spinner_payment_method_array">
+        <item> Credit </item>
+        <item> Debit </item>
+        <item> Paypal </item>
+    </string-array>
+
 </resources>
